电动汽车产业政策,比亚迪,蔚来发展整理完成

--- a/1-大环境与商业网络/电动汽车行业现状.md
+++ b/1-大环境与商业网络/电动汽车行业现状.md
@@ -14,6 +14,14 @@
 
 ## [特斯拉近几年产销数据](https://en.wikipedia.org/wiki/Tesla,_Inc.)
 
+## 特斯拉的收购行为
+|公司|领域|收购时间|收购金额|
+|---|---|---|---|
+|Riviera Tool LLC|a manufacturer of stamping die systems used to form sheet metal parts, 冲压模具制造商|2015-05-08|未知|
+|SolarCity|provides solar energy services to homeowners, businesses, government, and non-profit organizations, 太阳能服务供应商|2016-06-22|26 亿美元|
+|Grohmann Engineering|German engineering company based in Prüm 德国普鲁姆的一家工程公司|2016-11|1.35 亿美元|
+|Perbix|designs automated manufacturing equipment, 设计自动装配设备|2017-11-07|10.5 亿美元|
+|Maxwell Technologies|manufactures and markets energy storage and power delivery solutions for automobiles, 生产汽车储能设备， 提供电力输送解决方案|2019-02-09|2.18 亿美元|
 
 ## 特斯拉主要一级国际供应商
 |产品|供应商|
@@ -85,4 +93,30 @@
 ## 整车制造
 [同济大学专题报告—《燃料电池汽车动力总成方案分析》](http://www.xnyauto.com/news/201902/31654.html)
 
+## 蔚来， 比亚迪在电动汽车领域的发展要融入到中国新能源汽车发展历史中考虑
+
+## 蔚来汽车的合作伙伴
+
+## 蔚来资本（不是蔚来汽车）的投资行为
+
+|公司|介绍|时间|金额|领域|
+|---|---|---|---|---|
+|容百科技|国际领先的动力电池正极材料制造商|||先进制造|
+|康德复材|新能源汽车碳纤维轻量化整体解决方案|||先进制造|
+|联赢激光|中国激光焊接设备知名品牌|||先进制造|
+|易骑换电|新能源两轮电动车共享充电、换电服务商|||电动汽车及核心零件|
+|嬴彻科技|研发自动驾驶，智能新能源技术和物流大数据智能重卡车|||电动汽车及核心零件|
+|富特科技|一流的新能源汽车核心零部件供应商|||电动汽车及核心零件|
+|奥动新能源|新能源汽车换电技术和解决方案提供方|||新能源及能源互联网|
+|主线科技|卓越的智能驾驶解决方案与服务提供商|||自动驾驶及智能化服务|
+|Innovusion|打造可靠高效的自动驾驶感知系统|||自动驾驶及智能化服务|
+|小马智行|旨在为全球提供最先进、最安全、最可靠的自动驾驶技术|||自动驾驶及智能化服务|
+|黑芝麻|视觉感知核心技术开发与应用提供商|||自动驾驶及智能化服务|
+|Momenta|打造自动驾驶大脑，提供安全可量产的自动驾驶解决方案|||自动驾驶及智能化服务|
+|四维智联|为用户提供“共商”、“共建”、“共享”的车联网整体解决方案|||车联网及出行服务|
+|爱泊车|AI智慧泊车大数据运营平台|||车联网及出行服务|
+|车联天下|车载智能终端和车联网服务平台|||车联网及出行服务|
+|嘀嗒出行|共享经济的大众出行平台|||车联网及出行服务|
+|首汽约车|以高品质网约车为核心的一站式移动出行平台|||车联网及出行服务|
+|有车出行|主打新能源汽车的O2O租赁服务平台|||车联网及出行服务|
 
